--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,29 @@
     box-sizing: border-box;
 }
 
+
+/*CLOCK*/
+.clock {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    color: #17D4FE;
+    font-size: 60px;
+    font-family: Orbitron;
+    letter-spacing: 7px;
+   
+
+
+}
+
+
+
+
+
+
+
+
 .todoList{
     background-image: linear-gradient(120deg,#335145,#B1DECA);
     color: white;
