need to optimize for mobile

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -24,7 +24,7 @@
     flex: 1;
 }
 
-.recipe-directions{
+.recipe-directions-main, .recipe-directions-side, .recipe-directions-sweet{
     list-style: none;
 }
 
@@ -74,6 +74,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    flex: 1;
 }
 
 .grocery-list{
@@ -107,10 +108,11 @@
 
 .recipe-cards img{
     height: auto;
-    width: 250px;
+    width: 300px;
     padding: 10px;
 }
 
 .card {
     color: black;
+    margin: 10px;
 }
