--- a/css/menu.css
+++ b/css/menu.css
@@ -1,79 +1,126 @@
-/* MENU
-=========================== */
-.overlay {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  right: 0;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.9);
-  overflow-x: hidden;
-  transition: 0.5s;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-.overlay-content {
-  position: relative;
-  top: 20%;
+body{
+	font-family: 'Roboto', sans-serif;
+}
+* {
+	margin: 0;
+	padding: 0;
+}
+i {
+	margin-right: 10px;
+}/* ---------horizontal-navbar-menu-----------*/
+#navbar-animmenu {
+    background-image: linear-gradient(120deg,#5161ce,#5161ce);
+	float: left;
+	overflow: hidden;
+	position: relative;
+	padding: 10px 0px;
   width: 100%;
-/*    right: 0;*/
-  text-align: center;
-  margin-top: 30px;
+}
+#navbar-animmenu ul{
+	padding: 0px;
+	margin: 0px;
+  
 }
 
-.overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 36px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+#navbar-animmenu ul li a i{
+	margin-right: 10px;
 }
 
-.overlay a:hover, .overlay a:focus {
-/*  color: #f1f1f1;*/
+#navbar-animmenu li {
+	list-style-type: none;
+	float: left;
+}
+
+#navbar-animmenu ul li a{
+	color: rgba(255,255,255,0.5);
     text-decoration: none;
-    color: #f1ab86;  
+    font-size: 15px;
+    line-height: 45px;
+    display: block;
+    padding: 0px 20px;
+    transition-duration:0.6s;
+	transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    position: relative;
 }
 
-.overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
+#navbar-animmenu>ul>li.active>a{
+	color: #5161ce;
+	background-color: #fff;
+	transition: all 0.7s;
 }
 
-.menu {
-  position: fixed;
-    top: 0%;
-    right: 0;
-    z-index: 1;
-    list-style: none;
-    text-align: right;
-    color: #f1ab86;
-    text-decoration: none;
-    font-size: 40px; 
-    cursor: pointer;
+
+#navbar-animmenu a:not(:only-child):after {
+	content: "\f105";
+	position: absolute;
+	right: 20px;
+	top: 10%;
+	font-size: 14px;
+	font-family: "Font Awesome 5 Free";
+	display: inline-block;
+	padding-right: 3px;
+	vertical-align: middle;
+	font-weight: 900;
+	transition: 0.5s;
 }
 
-.menuM {
-  position: fixed;
-    top: 0%;
-    right: 0;
-    z-index: 1;
-    list-style: none;
-    text-align: right;
-    color: #B1DECA;
-    text-decoration: none;
+#navbar-animmenu .active>a:not(:only-child):after {
+	transform: rotate(90deg);
+}
+.hori-selector{
+	display:inline-block;
+	position:absolute;
+	height: 100%;
+	top: 10px;
+	left: 0px;
+	transition-duration:0.6s;
+	transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	background-color: #fff;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+}
+.hori-selector .right,
+.hori-selector .left{
+	position: absolute;
+	width: 25px;
+	height: 25px;
+	background-color: #fff;
+	bottom: 10px;
+}
+.hori-selector .right{
+	right: -25px;
+}
+.hori-selector .left{
+	left: -25px;
+}
+.hori-selector .right:before,
+.hori-selector .left:before{
+	content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #5161ce;
+}
+.hori-selector .right:before{
+	bottom: 0;
+    right: -25px;
+}
+.hori-selector .left:before{
+	bottom: 0;
+    left: -25px;
 }
 
 
 @media screen and (max-height: 450px) {
+/*
   .overlay a {font-size: 20px}
   .overlay .closebtn {
   font-size: 40px;
   top: 15px;
   right: 35px;
   }
+*/
 }
