--- a/css/recipes.css
+++ b/css/recipes.css
@@ -7,7 +7,7 @@
     background-image: linear-gradient(120deg,#461220,#B23A48);
     color: white;
     min-height: 100vh;
-    padding: 5%;
+/*    padding: 5%;*/
 }
 
 .top{
@@ -47,7 +47,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .threeMeal button{
@@ -109,10 +109,33 @@
 .recipe-cards img{
     height: auto;
     width: 300px;
-    padding: 10px;
+    padding: 1rem;
 }
 
 .card {
     color: black;
-    margin: 10px;
+    margin: 1rem;
+}
+
+@media screen and (max-width:768px)
+{
+    .top{
+        flex-direction: column;
+    }
+    .recipe-cards{
+        align-content: center;
+        justify-content: center;
+    }
+    
+    .card{
+        width: 80vw;
+    }
+    
+    .card img{
+        width: 60vw;
+    }
+    
+    .grocery-container{
+        
+    }
 }
