--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
     background-image: linear-gradient(120deg,#335145,#B1DECA);
     color: white;
     min-height: 100vh;
-    padding: 5%;
+/*    padding: 5%;*/
 }
 
 /*TODO LIST*/
