--- a/css/recipes.css
+++ b/css/recipes.css
@@ -70,7 +70,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    flex-direction: row;
+/*    flex-direction: row;*/
 }
 
 .threeMeal button{
@@ -150,7 +150,7 @@
     }
     .threeMeal{
     flex-direction: column;
-}
+    }
     .top{
         flex-direction: column;
     }
