--- a/css/recipes.css
+++ b/css/recipes.css
@@ -52,6 +52,13 @@
 
 /*3-PART MEAL SELECTOR*/
 
+.effort{
+    display: flex;
+    justify-content: space-around;
+}
+
+
+
 .threeMeal{
     display: flex;
     flex-wrap: wrap;
@@ -61,8 +68,6 @@
     flex-direction: row;
     width: 100vw;
 }
-
-
 
 .threeMeal button{
     padding: 0.8rem;
@@ -86,13 +91,13 @@
 
 .grocery-container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     text-align: center;
-    flex: 1;
 }
 
 .grocery-list{
-    min-width: 30%;
+    width: 100vw;
     list-style: none;
 }
 
@@ -106,13 +111,17 @@
     transition: all 0.5s ease;
 }
 
+/*
 .grocery li{
     flex: 1;
 }
+*/
 
+/*
 .grocery-item{
     padding: 0.4rem;
 }
+*/
 
 .partA, .partB, .partC,.partD{
     width: 25vw;
