--- a/css/recipes.css
+++ b/css/recipes.css
@@ -66,9 +66,9 @@
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
-    flex: 1.5;
     flex-direction: row;
     width: 100vw;
+    height: auto;
 }
 
 .threeMeal button{
@@ -132,7 +132,6 @@
 
 
 .partA .card img,.partB .card img, .partC .card img,.partD .card img{
-/*  clip: rect(0, 23vw, 20vw, 0);*/
     width: 25vw;
     float: left; 
 }
@@ -147,17 +146,19 @@
 
 @media screen and (max-width:850px)
 {
-    .body{
+    body{
         overflow-x: hidden;
         
     }
     .threeMeal{
-        
+        flex-direction: column;
     }
     
     .partA, .partB, .partC,.partD{
         width: 100vw;
-        float: left; 
+        height: auto;
+/*        float: left; */
+        font-size: 1.3rem;
     }
     
     .partA .card,.partB .card, .partC .card,.partD .card, .partA,.partB, .partC,.partD{
@@ -166,7 +167,8 @@
     }
     
     .partA .card img,.partB .card img, .partC .card img,.partD .card img{
-        width: 50vw;
+        padding: 0 15vw;
+        width: 100vw;
     }
     
     .partA button,.partB button, .partC button,.partD button{
