--- a/css/recipes.css
+++ b/css/recipes.css
@@ -137,8 +137,7 @@
 
 
 
-@media only screen and (max-width:900px)
-{
+@media screen and (max-width:900px){
     body{
         overflow-x: hidden;
         
@@ -162,10 +161,8 @@
     }
     
     .partA button,.partB button, .partC button,.partD button{
-/*
         width: 70vw;
         margin: 1vh 15vw;
-*/
     }
     
     .grocery-container{
