--- a/css/recipes.css
+++ b/css/recipes.css
@@ -140,11 +140,12 @@
 @media screen and (max-width:900px){
     body{
         overflow-x: hidden;
-        
+        font-size: 1.3rem;
     }
     
     .threeMeal{
         flex-direction: column;
+        font-size: 1.3rem;
     }
     
     .partA, .partB, .partC, .partD, .partA .card img,.partB .card img, .partC .card img,.partD .card img, .partA .card,.partB .card, .partC .card,.partD .card {
@@ -158,6 +159,7 @@
     
     .partA .card img,.partB .card img, .partC .card img,.partD .card img{
 /*        padding: 0 15vw;*/
+        width: 100vw;
     }
     
     .partA button,.partB button, .partC button,.partD button{
