--- a/css/recipes.css
+++ b/css/recipes.css
@@ -16,10 +16,14 @@
     
 }
 
+.container-fluid{
+    margin: 0;
+    padding: 0;
+}
 /*PAGE IN 4 PARTS*/
 
 .partA .card img,.partB .card img, .partC .card img,.partD .card img, .partA, .partB, .partC,.partD, .partA .card,.partB .card, .partC .card,.partD .card{
-      flex: 25%;
+/*      flex: 25%;*/
     float: left;  
 /*    width: 25vw;*/
 }
@@ -70,13 +74,15 @@
 }
 
 .threeMeal{
+/*
     display: flex;
     flex-wrap: wrap;
+*/
     justify-content: center;
     text-align: center;
 /*    min-width: 100vw;*/
     height: auto;
-    flex-direction: row;
+/*    flex-direction: row;*/
 }
 
 .threeMeal button{
@@ -144,12 +150,12 @@
     }
     
     .threeMeal{
-        flex-direction: column;
+/*        flex-direction: column;*/
         font-size: 1.3rem;
     }
     
     .partA, .partB, .partC, .partD, .partA .card img,.partB .card img, .partC .card img,.partD .card img, .partA .card,.partB .card, .partC .card,.partD .card {
-        flex: 100%;
+/*        flex: 100%;*/
 /*
         height: auto;
         min-width: 100vw;
