--- a/css/language.css
+++ b/css/language.css
@@ -1,7 +1,11 @@
-
-
 body{
     padding: 2%;
+    background-color: #162944;
+    color: #fff;
+}
+
+h1, h2, h3, h4{
+    color: #fff;
 }
 
 .numbers{
@@ -12,36 +16,8 @@ section{
     padding-top: 2%;
 }
 
-button{
-    border: none;
-    background-color: #e84a5f;
-    color: #fff;
-    border-radius: 10px;
-}
 
-button:hover {
-    border: none;
-    background-color: #ff847c;
-    color: #fff;
-    border-radius: 10px;
-}
-
-.card{
-    text-align: center;
-    padding: 30px;
-    margin: 20px;
-}
-
-
-.card .card__front{
-    color: #99b898;
-}
-
-.card .card__back{
-    color: #e84a5f;
-}
-
-.english__sentence{
+.english__sentence, .numbers, .japanese__alphabet{
     text-align: center;
 }
 
@@ -49,14 +25,104 @@ button:hover {
     display: inline-block;
 }
 
-
-.numbers{
-    text-align: center;
+.flashcards {
+  background-color: silver;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+  padding: 20px 0 0 0;
+  overflow: hidden;
+  box-shadow: inset 1px 0 0 0 #ad9c9c, inset -1px -1px 0 0 #f7f4ea, inset 2px 3px 5px 3px #a39e9e;
+} 
+.card, .container {
+  position: absolute;
+  width: 190px;
+  height: 280px; 
 }
 
-.japanese__alphabet{
-    text-align: center;
+.container {
+  cursor: pointer;
+  -webkit-transition: -webkit-transform 0.5s ease-in-out;
+  -moz-transition: -moz-transform 0.5s ease-in-out;
+  -o-transition: -o-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
+
+.container:hover {
+  -webkit-transform: rotateY(180deg);  
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.card>div>div  {
+  position: absolute;
+  width: 188px;
+  height: 208px;
+  padding-top: 70px;
+  text-align: center;
+  font-size: 80px;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.front, .back {
+  color: white;
+  border-radius: 6px;
+}
+
+.front {
+  z-index: 1;
+  background: -webkit-gradient(linear, top left, bottom right, color-stop(0%, #CABAC1), color(100%, #D5C9CF));
+  background: -webkit-linear-gradient(135deg, #CABAC1, #D5C9CF);
+  background: -moz-linear-gradient(135deg, #CABAC1, #D5C9CF);
+  background: -o-linear-gradient(135deg, #CABAC1, #D5C9CF);
+  background: linear-gradient(135deg, #CABAC1, #D5C9CF);
+  color: white;
+  border: 1px solid #aa8d99;
+  box-shadow: inset 0 0 0 5px #BAA6AE, inset -1px -1px 0 5px #aa8d99, inset 1px 1px 0 5px #e0ccd4, 2px 2px 2px 1px #a39e9e;
+  text-shadow: 1px 1px 1px #bcabb2;
+}
+.back {
+  -webkit-transform: rotateY(-180deg); 
+  -moz-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+  background: -webkit-gradient(linear, top left, bottom right, color-stop(0%, #D7C49C), color-stop(100%, #E1D4B8));
+  background: -webkit-linear-gradient(135deg, #D7C49C, #E1D4B8);
+  background: -moz-linear-gradient(135deg, #D7C49C, #E1D4B8);
+  background: -o-linear-gradient(135deg, #D7C49C, #E1D4B8);
+  background: -ms-linear-gradient(135deg, #D7C49C, #E1D4B8);
+  background: linear-gradient(135deg, #D7C49C, #E1D4B8);
+  color: white;
+  border: 1px solid #b29a6e;
+  box-shadow: inset 0 0 0 5px #CCB382, inset -1px -1px 0 5px #b29a6e, inset 1px 1px 0 5px #efe1c4, 2px 2px 2px 1px #a39e9e;
+}
+
+aside {
+  width: 600px;
+  margin: 15px auto 0 auto;
+  padding: 5px;
+  background: -webkit-gradient(linear, top, bottom, color-stop(0%, #D5D3BC), color-stop(100%, #C8C5A9));
+  background: -webkit-linear-gradient(#D5D3BC, #C8C5A9);
+  background: -moz-linear-gradient(#D5D3BC, #C8C5A9);
+  background: -o-linear-gradient(#D5D3BC, #C8C5A9);
+  background: linear-gradient(#D5D3BC, #C8C5A9);
+  border: 1px dashed #B5B28D;
+  box-shadow: 1px 1px 3px 0 #d3cdbc;
+  color: #545641;
+}
+
 
 
 /*OVERLAY*/
@@ -146,3 +212,7 @@ button:hover {
 .keyboard__keys{
     display: inline-flex;
 }*/
+
+
+/*new*/
+
