--- a/css/menu.css
+++ b/css/menu.css
@@ -1,126 +1,128 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-body{
-	font-family: 'Roboto', sans-serif;
-}
-* {
-	margin: 0;
-	padding: 0;
-}
-i {
-	margin-right: 10px;
-}/* ---------horizontal-navbar-menu-----------*/
-#navbar-animmenu {
-    background-image: linear-gradient(120deg,#5161ce,#5161ce);
-	float: left;
-	overflow: hidden;
-	position: relative;
-	padding: 10px 0px;
-  width: 100%;
-}
-#navbar-animmenu ul{
-	padding: 0px;
-	margin: 0px;
-  
+
+ a {
+	 color: inherit;
 }
 
-#navbar-animmenu ul li a i{
-	margin-right: 10px;
+ h1 {
+	 font-size: 3em;
 }
-
-#navbar-animmenu li {
-	list-style-type: none;
-	float: left;
+ .menu {
+	 filter: url('#shadowed-goo');
+     z-index: 20;
 }
-
-#navbar-animmenu ul li a{
-	color: rgba(255,255,255,0.5);
-    text-decoration: none;
-    font-size: 15px;
-    line-height: 45px;
-    display: block;
-    padding: 0px 20px;
-    transition-duration:0.6s;
-	transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    position: relative;
+ .menu-item, .menu-open-button {
+	 background: #C62E65;
+	 border-radius: 100%;
+	 width: 80px;
+	 height: 80px;
+	 margin-left: -10vw;
+	 position: absolute;
+	 top: 5vh;
+	 color: white;
+	 text-align: center;
+	 line-height: 80px;
+	 transform: translate3d(0, 0, 0);
+	 transition: transform ease-out 200ms;
 }
-
-#navbar-animmenu>ul>li.active>a{
-	color: #5161ce;
-	background-color: #fff;
-	transition: all 0.7s;
+ .menu-open {
+	 display: none;
 }
-
-
-#navbar-animmenu a:not(:only-child):after {
-	content: "\f105";
-	position: absolute;
-	right: 20px;
-	top: 10%;
-	font-size: 14px;
-	font-family: "Font Awesome 5 Free";
-	display: inline-block;
-	padding-right: 3px;
-	vertical-align: middle;
-	font-weight: 900;
-	transition: 0.5s;
+ .hamburger {
+	 width: 25px;
+	 height: 3px;
+	 background: white;
+	 display: block;
+	 position: absolute;
+	 top: 50%;
+	 left: 50%;
+	 margin-left: -12.5px;
+	 margin-top: -1.5px;
+	 transition: transform 200ms;
 }
-
-#navbar-animmenu .active>a:not(:only-child):after {
-	transform: rotate(90deg);
+ .hamburger-1 {
+	 transform: translate3d(0, -8px, 0);
 }
-.hori-selector{
-	display:inline-block;
-	position:absolute;
-	height: 100%;
-	top: 10px;
-	left: 0px;
-	transition-duration:0.6s;
-	transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-	background-color: #fff;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
+ .hamburger-2 {
+	 transform: translate3d(0, 0, 0);
 }
-.hori-selector .right,
-.hori-selector .left{
-	position: absolute;
-	width: 25px;
-	height: 25px;
-	background-color: #fff;
-	bottom: 10px;
+ .hamburger-3 {
+	 transform: translate3d(0, 8px, 0);
 }
-.hori-selector .right{
-	right: -25px;
+ .menu-open:checked + .menu-open-button .hamburger-1 {
+	 transform: translate3d(0, 0, 0) rotate(45deg);
 }
-.hori-selector .left{
-	left: -25px;
+ .menu-open:checked + .menu-open-button .hamburger-2 {
+	 transform: translate3d(0, 0, 0) scale(0.1, 1);
 }
-.hori-selector .right:before,
-.hori-selector .left:before{
-	content: '';
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #5161ce;
+ .menu-open:checked + .menu-open-button .hamburger-3 {
+	 transform: translate3d(0, 0, 0) rotate(-45deg);
 }
-.hori-selector .right:before{
-	bottom: 0;
-    right: -25px;
+ .menu {
+	 position: absolute;
+	 left: 10%;
+	 margin-left: -80px;
+	 padding-top: 20px;
+	 padding-left: 80px;
+	 width: 650px;
+	 height: 150px;
+	 box-sizing: border-box;
+	 font-size: 20px;
+	 text-align: left;
 }
-.hori-selector .left:before{
-	bottom: 0;
-    left: -25px;
+ .menu-item:hover {
+	 background: white;
+	 color: #00bcd4;
 }
-
+ .menu-item:nth-child(3) {
+	 transition-duration: 180ms;
+}
+ .menu-item:nth-child(4) {
+	 transition-duration: 180ms;
+}
+ .menu-item:nth-child(5) {
+	 transition-duration: 180ms;
+}
+ .menu-item:nth-child(6) {
+	 transition-duration: 180ms;
+}
+ .menu-open-button {
+	 z-index: 2;
+	 transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	 transition-duration: 400ms;
+	 transform: scale(1.1, 1.1) translate3d(0, 0, 0);
+	 cursor: pointer;
+}
+ .menu-open-button:hover {
+	 transform: scale(1.2, 1.2) translate3d(0, 0, 0);
+}
+ .menu-open:checked + .menu-open-button {
+	 transition-timing-function: linear;
+	 transition-duration: 200ms;
+	 transform: scale(0.8, 0.8) translate3d(0, 0, 0);
+}
+ .menu-open:checked ~ .menu-item {
+	 transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+ .menu-open:checked ~ .menu-item:nth-child(3) {
+	 transition-duration: 190ms;
+	 transform: translate3d(110px, 0, 0);
+}
+ .menu-open:checked ~ .menu-item:nth-child(4) {
+	 transition-duration: 290ms;
+	 transform: translate3d(220px, 0, 0);
+}
+ .menu-open:checked ~ .menu-item:nth-child(5) {
+	 transition-duration: 390ms;
+	 transform: translate3d(330px, 0, 0);
+}
+ .menu-open:checked ~ .menu-item:nth-child(6) {
+	 transition-duration: 490ms;
+	 transform: translate3d(440px, 0, 0);
+}
+ 
 
 @media screen and (max-height: 450px) {
-/*
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-  font-size: 40px;
-  top: 15px;
-  right: 35px;
-  }
-*/
+
 }
