--- a/css/recipes.css
+++ b/css/recipes.css
@@ -1,22 +1,13 @@
-*{
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
-    font-size: 1.2rem;
-}
 
 .recipePage{
     color: white;
     min-height: 100vh;
     min-width: 100vw;
-    background-color: #472d30;
-/*    background-image: linear-gradient(180deg,#472d30,#723d46,#ffe1a8,#e26d5c);*/
+/*    background-color: #472d30;*/
 /*    padding: 5%;*/
 }
 
 
-.bottom{
-    
-}
 
 .container-fluid{
     margin: 0;
@@ -37,26 +28,10 @@
     border: none;
 }
 
-.partA{
-    background-color: #472d30;
-}
-
-.partB{
-    background-color: #723d46;
-}
-
-.partC{
-    background-color: #e26d5c;
-}
-
-.partD{
-    background-color: #8C2F39;
-}
-
 
 
 /*RECIPES*/
-.recipe-directions-main, .recipe-directions-side, .recipe-directions-sweet{
+.recipe-directions-breakfast, .recipe-directions-lunch, .recipe-directions-dinner, .recipe-directions-sweet{
     list-style: disc;
 }
 
@@ -65,14 +40,26 @@
 
 /*3-PART MEAL SELECTOR*/
 
-.effort{
+.splitBreakfast, .splitLunch, .splitDinner{
     display: flex;
     justify-content: space-around;
+    flex: 1;
+    flex-direction: row
 }
 
-.meal-container{
-    
+.veggie, .protein, .carb {
+    padding: 0.8rem;
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 3rem;
+    margin: .5rem 1rem;
+    width: 30vw;
+    color: #8C2F39;
+    background: #fff;
+    cursor: default;
+    transition: all 0.3s ease;
 }
+
 
 .threeMeal{
 /*
@@ -86,23 +73,6 @@
 /*    flex-direction: row;*/
 }
 
-.threeMeal button{
-    padding: 0.8rem;
-    font-size: 1.5rem;
-    border: none;
-    background-image: linear-gradient(to right bottom, rgba(255,255,255,0.6), rgba(255,255,255,0.2));
-    border-radius: 3rem;
-    margin: .5rem;
-    color: #8C2F39;
-    background: #fff;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.threeMeal button:hover{ 
-    background: #ffe1a8;
-    color: #fff;
-}
 
 
 /*GROCERY LIST*/
@@ -128,18 +98,6 @@
     font-size: 1.5rem;
     transition: all 0.5s ease;
 }
-
-/*
-.grocery li{
-    flex: 1;
-}
-*/
-
-/*
-.grocery-item{
-    padding: 0.4rem;
-}
-*/
 
 
 
@@ -170,6 +128,11 @@
     
     .partA button,.partB button, .partC button,.partD button{
         width: 70vw;
+        margin: 1vh 15vw;
+    }
+    
+     .partA .redoBreakfast, .partB .redoLunch, .partC .redoDinner, .partD .redoSweet {
+        width: 10vw;
         margin: 1vh 15vw;
     }
     
