--- a/css/style.css
+++ b/css/style.css
@@ -3,35 +3,49 @@
     box-sizing: border-box;
 }
 
+body{
+      overflow-x: hidden;
+    background-color: #2F1847;
+}
 
 /*CLOCK*/
 .clock {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 10%;
+    left: 80%;
     transform: translateX(-50%) translateY(-50%);
-    color: #17D4FE;
-    font-size: 60px;
-    font-family: Orbitron;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
     letter-spacing: 7px;
 
 }
 
+/*TODO LIST*/
 
-
-.todoList{
-    background-image: linear-gradient(120deg,#335145,#B1DECA);
+.bubble{
+   background-color: #2F1847;
     color: white;
-    min-height: 100vh;
-/*    padding: 5%;*/
+/*    min-width: 30vh;*/
+    padding: 5%;
+/*   z-index: 1; */
+   position: relative;
+   width: 45vw;
+   min-height: 20%;
+   margin: 1rem auto;
+   border-radius: 10px;
+   box-shadow: 0px 10px 30px -10px #000;
+
 }
 
-/*TODO LIST*/
+.display{
+    display: flex;
+}
 
 .todo-container{
     display: flex;
     justify-content: center;
     text-align: center;
+    
 }
 
 .todo-list{
@@ -42,7 +56,7 @@
 .todo{
     margin: 0.5rem;
     background: #fff;
-    color: black;
+    color: #D80286;
     display: flex;
     justify-content: space-between;
     font-size: 1.5rem;
@@ -80,19 +94,20 @@ header,form{
     text-align: center;
 }
 
-form input, form button, .todo-list button{
+form input, form button, .todo-list button, .btn{
     padding: 0.5rem;
     font-size: 1.5rem;
     border: none;
     background-image: linear-gradient(to right bottom, rgba(255,255,255,0.6), rgba(255,255,255,0.2));
 }
 
+
 form input{
     border-radius: 3rem 0rem 0rem 3rem;
 }
 
 form button, .todo-list button{
-    color: #335145;
+    color: #D80286;
     background: white;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -103,8 +118,8 @@ form button{
 }
 
 form button:hover, .todo-list button:hover{ 
-    background: #335145;
-    color: #fff;
+    background: #2F1847;
+    color: #D80286;
 }
 
 select{
@@ -132,7 +147,7 @@ select{
 .select::after{
     content: "\25BC";
     position: absolute;
-    background: #B1DECA;
+    background: #D80286;
     top: 0;
     right: 0;
     pointer-events: none;
@@ -142,5 +157,403 @@ select{
 
 .select:hover::after{
     background: #fff;
-    color: #B1DECA;
+    color: #D80286;
+}
+
+
+*, *:before, *:after {
+   box-sizing: inherit;
+}
+
+* {
+   outline: 0;
+}
+
+.container {
+   width: 90%;
+   margin: auto;
+}
+
+.mobile-wrapper {
+   background: #fff;
+   /* relative with .today-box::before*/
+   z-index: 1; 
+   position: relative;
+   /*---------*/
+   width: 80vw;
+   min-height: 100%;
+   margin: 1rem auto;
+   padding: 10px 0 20px;
+   border-radius: 10px;
+   box-shadow: 0px 10px 30px -10px #000;
+   overflow: hidden;
+
+}
+
+
+
+.hea {
+   padding-bottom: 15px;
+   margin-bottom: 40px;
+   .contain {
+      position: relative;
+      span {
+         color: #444;
+         font: {
+            family: 'Ramabhadra';
+            size: 21px;
+            weight: 700;
+         }
+      }
+      h1 {
+         margin-top: 5px;
+         color: #919294;
+         font: {
+            size: 13px;
+            weight: 300;
+         }
+      }
+
+      .menu-toggle {
+         width: 25px;
+         height: 25px;
+         background: #fff;
+         padding: 24px;
+         border-radius: 50%;
+         direction: rtl;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         box-shadow: 0px 10px 30px -14px #000;
+         position: absolute;
+         top: 0;
+         right: 0;
+         cursor: pointer;
+         span {
+            display: block;
+            width: 25px;
+            height: 2px;
+            background: #777;
+            border-radius: 2px;
+            transition: all 300ms ease;
+            &:not(:last-child) {
+               margin-bottom: 5px;
+            }
+            &:first-child {
+               width: 20px;
+            }
+            &:last-child {
+               width: 15px;
+            }
+         }  
+         &:hover span:first-child,
+         &:hover span:last-child {
+            width: 100%;
+         }
+      }
+      &::before {
+         content: "";
+         display: block;
+         width: 0;
+         height: 0;
+         border: 6px solid transparent;
+         border-left-color: #e8e8e8;
+         position: absolute;
+         bottom: -13px;
+         right: 0px;
+      }
+      &::after {
+         content: "";
+         display: block;
+         width: calc(100% - 10px);
+         height: 2px;
+         background-color: #e8e8e8;
+         position: relative;
+         top: 8px;
+      }
+   }
+}
+
+.today-box {
+   background: #624763;
+   color: #FFF;
+   padding: 37px 40px;
+   position: relative;
+   box-shadow: 0px 0px 40px -9px #485fed;
+   margin-bottom: 50px;
+   &::before {
+      content: "";
+      background: linear-gradient(to left, #485fed, rgba(255, 44, 118, .25)), #624763;
+      opacity: 0.4;
+      z-index: -1; // CHILD /*negative*/ /* relative with .mobile-wrapper it's his parent background*/
+      display: block;
+      width: 100%;
+      height: 40px;
+      margin: auto;
+      position: absolute;
+      bottom: -13px;
+      left: 50%;
+      transform: translatex(-50%);
+      border-radius: 50%;
+      box-shadow: 0px 0px 40px 0 #485fed; 
+   }
+   .breadcrumb {
+      font-weight: 300;
+      position: relative;
+      &::after {
+         content: "\f3d1";
+         font-family: 'Ionicons';
+         vertical-align: middle;
+         font-size: 12px;
+         font-weight: 100;
+         display: inline-block;
+         color: #fff;
+         text-align: center;
+         position: absolute;
+         left: 45px;
+         top: 3px;
+      }
+   }
+   .date-title {
+      font-size: 20px;
+      margin: 7px 0 0 0;
+      letter-spacing: 1px;
+      font-weight: 600;
+      text-shadow: 0px 0px 5px  rgba(#000, 0.15);
+
+   }
+   .plus-icon {
+      border: 2px solid rgba(#FFF, 0.6);
+      border-radius: 50%;
+      box-shadow: 0px 10px 30px -14px #000;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 40px;
+      cursor: pointer;
+      transition: all 350ms ease;
+      transition-timing-function: cubic-bezier(0.05,1.8,1,1.57);
+      &:hover {
+         transform: translateY(-40%);
+      }
+      i {
+         font-size: 22px;
+         font-weight: 700;
+         background: #fff;
+         color: #777;
+         width: 45px;
+         height: 45px;
+         border: 6px solid #485fed;
+         border-radius: 50%;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+      }
+      &:active {
+         top: 52%;
+         transform: translatey(-52%);
+         right: 38px;
+         box-shadow: 0px 8px 30px -14px #000;
+
+      }
+   }
+}
+
+
+.upcoming-events {
+   .container {
+      h3 {
+         color: #333;
+         font-size: 17px;
+         margin-bottom: 30px;
+         position: relative;
+         &::before {
+            content: "";
+            display: block;
+            width: 58%;
+            height: 2px;
+            background-color: #e8e8e8;
+            position: absolute;
+            top: 60%;
+            transform: translatey(-60%);
+            right: 0;
+         }
+         &::after {
+            content: "\f3ff";
+            font-family: 'Ionicons';
+            color: rgba(0, 0, 0, 0.1);
+            vertical-align: middle;
+            font-size: 36px;
+            font-weight: 100;
+            display: inline-block;
+            background: #fff;
+            color: #919294;
+            width: 38px;
+            text-align: center;
+            position: absolute;
+            right: 60px;
+            top: -10px;
+         }
+      }
+      .events-wrapper {
+         margin-bottom: 30px;
+         .event {
+            position: relative;
+            margin-bottom: 25px;
+            padding-left:30px;
+            cursor: pointer;
+            i {
+               font-size: 24px;
+               font-weight: 100;
+               position: absolute;
+               left: 0;
+               top: -4px;
+            }
+            .event__point {
+               margin: 0;
+               color: #555;
+               font: {
+                  size: 15px;
+               }
+               letter-spacing: 1px;
+            }
+            .event__duration {
+               position: absolute;
+               top: 5px;
+               right: 0;
+               color: #999;
+               font: {
+                  size: 10px;
+               }
+            }
+            .event__description {
+               margin-top: 10px;
+               color: #919294;
+               font-size: 13px;
+               font-weight: 300;
+
+            }
+            &.active {
+               background: #e8e8e8;
+               padding: 17px 0 5px 60px;
+               margin-bottom: 38px;
+               border-radius: 5px;
+               &::after {
+                  content:"";
+                  display: block;
+                  width: 90%;
+                  height: 10px;
+                  background: #fff;
+                  border: 2px solid #ddd;
+                  border-top:0;
+                  border-radius: 0 0 5px 5px;
+                  position: absolute;
+                  bottom: -10px;
+                  left: 50%;
+                  transform: translatex(-50%);
+               }
+               i {
+                  position: absolute;
+                  left: 25px;
+                  top: 17px;
+               }  
+               .event__description {
+                  &::before,
+                  &::after {
+                     content: "\f3d1";
+                     font-family: 'Ionicons';
+                     font-size: 32px;
+                     display: inline-block;
+                     color: #919294;
+                     text-align: center;
+                     position: absolute;
+                     right: 30px;
+                     top: 50%;
+                     transform: translateY(-50%);
+                     cursor: pointer;
+                  } 
+                  &::before {
+                     right: 45px;
+                     font-size: 22px;
+                     transition: all 550ms ease;
+                     transition-timing-function: cubic-bezier(0.05,1.8,1,1.57);
+                  }
+               }
+               &:hover .event__description::before {
+                  transform: translate(15px, -12px);
+               }
+            }
+         }
+      }
+   }
+}
+
+
+.hot {
+   color: #ee6b51;
+}
+
+.done {
+   color: #999 !important;
+}
+
+.icon-in-active-mode {
+   color: #43ff28;
+   font-size: 20px !important;
+}
+
+.upcoming {
+   font-weight: bold;
+   color: #777
+
+}
+
+
+.add-event-button {
+   display: flex;
+   align-items: center;
+   margin-left: auto;
+   border: 0;
+   padding: 0;
+   background: linear-gradient(to left, #485fed, rgba(255, 44, 118, .25)), #485fed;
+   border-radius: 50px;
+   cursor: pointer;
+   box-shadow: 0px 0px 40px -9px #485fed;
+   &:active {
+      position: relative;
+      top: 2px;
+      left: 2px;
+   }
+   .add-event-button__title{
+      color: #FFF;
+      padding: 0 18px 0 23px;
+      text-shadow: 0px 0px 5px  rgba(#000, 0.2);
+         size: 15px;
+   }
+   .add-event-button__icon {
+      display: inline-block;
+      background: rgba(#FFF, 0.1);
+      padding: 0 17px 0 12px;
+      height: 100%;
+      i {
+         margin: 0;
+         color: #fff;
+         font-size: 25px;
+         padding: 13px 0;
+      }
+   }
+}
+
+
+@media screen and (max-width:900px){
+    
+    .bubble, .mobile-wrapper{
+   width: 380px;
+
+}
+    
+    .display{
+    display: block;
+}
+    
 }
