--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
     font-family: 'Poppins', sans-serif;
     font-family: 'Orbitron', sans-serif;
     box-sizing: border-box;
-    font-size: 1.2rem;
+    
     
 }
 
@@ -18,8 +18,13 @@ body {
    height:100vh;
    padding: 3rem 0;
    margin: 0;
-    
+    font-size: 2rem;
    }
+
+
+h1{
+    font-size: 1.3rem;
+}
 
 /*---------------BUTTONS----------------------*/
 
