--- a/css/recipes.css
+++ b/css/recipes.css
@@ -61,12 +61,14 @@ header{
     transition: all 0.5s ease;
 }
 
-
+ul {
+    list-style-type: "o";
+}
 
 
 @media screen and (max-width:980px){
     *{
-        font-size: 1.4rem;
+        font-size: 1.7rem;
     }
     
     body{
