--- a/css/menu.css
+++ b/css/menu.css
@@ -13,7 +13,7 @@
      z-index: 20;
 }
  .menu-item, .menu-open-button {
-	 background: #C62E65;
+	 background: #D80286;
 	 border-radius: 100%;
 	 width: 80px;
 	 height: 80px;
