--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
     font-family: 'Poppins', sans-serif;
     font-family: 'Orbitron', sans-serif;
     box-sizing: border-box;
-    
+    color: #D80286;
     
 }
 
@@ -14,8 +14,10 @@ body {
 /*   background: linear-gradient(45deg, rgb(19, 73, 95), rgb(118, 75, 226), rgb(131, 115, 198), rgb(119, 211, 185));*/
 /*    background-image: linear-gradient(135deg,#162944,#2F1847,#624763);*/
 /*    background-color: #2F1847;*/
+    
    background-attachment: fixed;
    height:100vh;
+    color: #fff;
    padding: 3rem 0;
    margin: 0;
     font-size: 2rem;
@@ -65,6 +67,7 @@ button{
     border-radius: 3rem;
     margin: .5rem;
     color: #D80286;
+    background: #fff;
     cursor: pointer;
     transition: all 0.3s ease;
 }
@@ -82,13 +85,13 @@ button:hover{
     background-image: linear-gradient(to right bottom, rgba(255,255,255,0.6), rgba(255,255,255,0.2));
     border-radius: 3rem;
     margin: .5rem;
-    color: #8C2F39;
+    color: #D80286;
     background: #fff;
     cursor: pointer;
     transition: all 0.3s ease;
 }
 
 .dark button:hover{ 
-    background: #ffe1a8;
+    background: #D80286;
     color: #fff;
 }
