--- a/css/recipes.css
+++ b/css/recipes.css
@@ -84,13 +84,13 @@ ul {
         width: 100vw;
         object-position: 0 0;
         object-fit: cover;
-        border-radius: 4rem;
+        border-radius: 5rem;
         padding: 1rem;
     }
     
     .recipeButtons{
         top: 0;
-        right: 10vw;
+        right: 0;
     }
     
     .breakfast{
