--- a/css/language.css
+++ b/css/language.css
@@ -80,13 +80,15 @@ section{
 .front {
   z-index: 1;
   background: -webkit-gradient(linear, top left, bottom right, color-stop(0%, #CABAC1), color(100%, #D5C9CF));
-  background: -webkit-linear-gradient(135deg, #CABAC1, #D5C9CF);
-  background: -moz-linear-gradient(135deg, #CABAC1, #D5C9CF);
-  background: -o-linear-gradient(135deg, #CABAC1, #D5C9CF);
-  background: linear-gradient(135deg, #CABAC1, #D5C9CF);
+  background: -webkit-linear-gradient(135deg, #D80286, #D5C9CF);
+  background: -moz-linear-gradient(135deg, #D80286, #D5C9CF);
+  background: -o-linear-gradient(135deg, #D80286, #D5C9CF);
+  background: linear-gradient(135deg, #D80286, #D5C9CF);
+/*
   color: white;
   border: 1px solid #aa8d99;
-  box-shadow: inset 0 0 0 5px #BAA6AE, inset -1px -1px 0 5px #aa8d99, inset 1px 1px 0 5px #e0ccd4, 2px 2px 2px 1px #a39e9e;
+*/
+/*  box-shadow: inset 0 0 0 5px #BAA6AE, inset -1px -1px 0 5px #aa8d99, inset 1px 1px 0 5px #e0ccd4, 2px 2px 2px 1px #a39e9e;*/
   text-shadow: 1px 1px 1px #bcabb2;
 }
 .back {
@@ -212,4 +214,147 @@ aside {
 
 
 /*new*/
+
+
+
+/* FLASH CARD STYLING */
+
+.card {
+    left: 30vw;
+}
+
+.container .button-container{
+  text-align: center;
+    
+  /*   margin-top: 10px;   */
+}
+
+.container .button-container button{
+  font-size: 15px;
+}
+
+.container .button-container i{
+  font-size: 25px;
+}
+
+.button-container button {
+  padding: 10px 15px;
+  font-weight: bold;
+  background-color: transparent;
+  border-radius: 5px;
+  color: black;
+}
+
+
+
+
+/* entire container, keeps perspective */
+
+.container .flip-container {
+  margin: 0 auto;
+	-webkit-perspective: 1000;
+	-moz-perspective: 1000;
+	-ms-perspective: 1000;
+	perspective: 1000;
+	-ms-transform: perspective(1000px);
+	-moz-transform: perspective(1000px);
+	-moz-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+}
+
+/* flip the pane  */
+.container .flip-container.flipped .flipper, .container .flip-container.flipped .flipper {
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+	-o-transform: rotateY(180deg);
+	transform: rotateY(180deg);
+}
+
+.container .flip-container, .front, .back {
+	width: 400px;
+	height: 300px;
+/* 	border-radius: 24px; */
+	box-sizing: border-box;
+}
+
+@media only screen and (max-width: 768px) {
+	.flip-container {
+/* 		margin: 10vh auto; */
+	}
+
+	.flip-container, .front, .back {
+		width: 150vw;
+		height: 80vh;
+	}
+}
+
+.front, .back {
+	text-align: center;
+	font-family: 'Arvo';
+	font-size: 2.4em;
+	line-height: 1em;
+	padding-top: calc(50% - 3em);
+	color: #ffffff;
+/* 	border: 1px solid #95A39D; */
+}
+
+/* flip speed goes here */
+.flipper {
+	-webkit-transition: 0.2s;
+	-webkit-transform-style: preserve-3d;
+	-ms-transition: 0.2s;
+	-moz-transition: 0.2s;
+	-moz-transform: perspective(1000px);
+	-moz-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+	transition: 0.2s;
+	transform-style: preserve-3d;
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-transition: 0.3s;
+	-webkit-transform-style: preserve-3d;
+	-webkit-transform: rotateY(0deg);
+	-moz-transition: 0.3s;
+	-moz-transform-style: preserve-3d;
+	-moz-transform: rotateY(0deg);
+	-o-transition: 0.3s;
+	-o-transform-style: preserve-3d;
+	-o-transform: rotateY(0deg);
+	-ms-transition: 0.3s;
+	-ms-transform-style: preserve-3d;
+	-ms-transform: rotateY(0deg);
+	transition: 0.3s;
+	transform-style: preserve-3d;
+	transform: rotateY(0deg);
+	position: absolute;
+	top: 0;
+	left: 0;
+  box-shadow: 10px 10px 16px -1px rgba(163,163,163,0.4);
+}
+
+/* front pane, placed above back */
+.front {
+/* 	z-index: 2; */
+  /* for firefox 31 */
+	-webkit-transform: rotateY(0deg);
+	-ms-transform: rotateY(0deg);
+	background-color: #337ab7;
+}
+
+/* back, initially hidden pane */
+.back {
+	-webkit-transform: rotateY(-180deg);
+	-moz-transform: rotateY(-180deg);
+	-o-transform: rotateY(-180deg);
+	-ms-transform: rotateY(-180deg);
+	transform: rotateY(-180deg);
+	background-color: #2BBE83;
+}
 
